2012-09-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.8

2012-09-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars: Updating required headers here now
	* src/Makevars.win: Updating required headers here now
	* configure: Deprecated, no longer used or installed
	* configure.win: Deprecated, no longer used or installed
	* inst/examples/standard/Makefile.win: R_ARCH autodetection

2012-09-04  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars.win: Ensure static library is copied to target on both
	architectures

2012-08-19  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/eigen/cmake/CMakeLists.txt: Added a second patch by
	Peter to support compilation on Windows
	* inst/examples/armadillo/cmake/CMakeLists.txt: idem

2012-08-13  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/eigen/cmake/CMakeLists.txt: Added Peter's patch
	* inst/examples/armadillo/cmake/CMakeLists.txt: idem

2012-08-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.7

	* inst/examples/eigen/: New example directory for Eigen
	* inst/examples/eigen/rinside_eigen0.cpp: simple first example
	* inst/examples/eigen/rinside_eigen1.cpp: second example

2012-08-10  Dirk Eddelbuettel  <edd@dexter>

	* inst/examples/armadillo/: New example directory for Armadillo
	* inst/examples/armadillo/rinside_arma0.cpp: simple first example
	* inst/examples/armadillo/rinside_arma1.cpp: second example

2012-04-08  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/standard/rinside_sample12.cpp: New example

2012-03-30  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/wt/wtdensity.cpp: Extended / prettyfied Wt example to
	use CSS styling as well as some simple headers and descriptions
	* inst/examples/wt/wtdensity.css: Added simple CSS markup
	* inst/examples/wt/wtdensity.xml: Added text and headers

	* inst/examples/wt/wtdensityPlain.cpp: Renamed old version

2012-01-18  Dirk Eddelbuettel  <edd@debian.org>
